syntax = "proto3";
package pepto.weather_service.v1;
option java_package = "com.doordash.pepto.schema.weather_service";

import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "pepto/options.proto";
import "common/date.proto";

// weather_historical_model table
message WeatherHistoricalModel { 
  option (schema_type) = "datalake";
  option (cdc_source) = "crdb";

  // id string
  string id = 1 [(is_key_column)=true];

  // past_date date.Date
  date.Date past_date = 2;

  // starting_point_id int64
  int64 starting_point_id = 3;

  // precip_intensity string
  string precip_intensity = 4;

  // weather_summary string
  string weather_summary = 5;

  // weather_json string
  string weather_json = 6;

  // hour_local string
  string hour_local = 7;

  // hour_utc string
  string hour_utc = 8;

  // uv_index string
  string uv_index = 9;

  // temperature string
  string temperature = 10;

  // dewpoint string
  string dewpoint = 11;

  // visibility string
  string visibility = 12;

  // humidity string
  string humidity = 13;

  // apparent_temperature string
  string apparent_temperature = 14;

  // pressure string
  string pressure = 15;

  // wind_speed string
  string wind_speed = 16;

  // wind_direction string
  string wind_direction = 17;

  // cloud_ceiling string
  string cloud_ceiling = 18;

  // icon string
  string icon = 19;

  // sunrise_local string
  string sunrise_local = 20;

  // sunset_local string
  string sunset_local = 21;

}

// weather_alert_detail table
message WeatherAlertDetail { 
  option (schema_type) = "datalake";
  option (cdc_source) = "crdb";

  // id string
  string id = 1 [(is_key_column)=true];

  // detail_key string
  string detail_key = 2;

  // poll_time google.protobuf.Timestamp
  google.protobuf.Timestamp poll_time = 3;

  // raw_json string
  string raw_json = 4;

}

// weather_forecast_model table
message WeatherForecastModel { 
  option (schema_type) = "datalake";
  option (cdc_source) = "crdb";

  // id string
  string id = 1 [(is_key_column)=true];

  // created_date date.Date
  date.Date created_date = 2;

  // forecast_date date.Date
  date.Date forecast_date = 3;

  // starting_point_id int64
  int64 starting_point_id = 4;

  // precip_probability string
  string precip_probability = 5;

  // precip_intensity string
  string precip_intensity = 6;

  // weather_summary string
  string weather_summary = 7;

  // weather_json string
  string weather_json = 8;

  // hour_local string
  string hour_local = 9;

  // hour_utc string
  string hour_utc = 10;

  // uv_index string
  string uv_index = 11;

  // temperature string
  string temperature = 12;

  // dewpoint string
  string dewpoint = 13;

  // visibility string
  string visibility = 14;

  // humidity string
  string humidity = 15;

  // apparent_temperature string
  string apparent_temperature = 16;

  // pressure string
  string pressure = 17;

  // wind_speed string
  string wind_speed = 18;

  // wind_direction string
  string wind_direction = 19;

  // cloud_cover string
  string cloud_cover = 20;

  // icon string
  string icon = 21;

}

// weather_24hour_forecast_model table
message Weather24hourForecastModel {
  option (schema_type) = "datalake";
  option (cdc_source) = "crdb";

  // id string
  string id = 1 [(is_key_column)=true];

  // created_datetime google.protobuf.Timestamp
  google.protobuf.Timestamp created_datetime = 2;

  // starting_point_id int64
  int64 starting_point_id = 3;

  // precip_probability string
  string precip_probability = 4;

  // precip_intensity string
  string precip_intensity = 5;

  // precip_type string
  string precip_type = 6;

  // weather_summary string
  string weather_summary = 7;

  // hour_local string
  string hour_local = 8;

  // hour_utc string
  string hour_utc = 9;

  // uv_index string
  string uv_index = 10;

  // temperature string
  string temperature = 11;

  // dewpoint string
  string dewpoint = 12;

  // visibility string
  string visibility = 13;

  // humidity string
  string humidity = 14;

  // apparent_temperature string
  string apparent_temperature = 15;

  // pressure string
  string pressure = 16;

  // wind_speed string
  string wind_speed = 17;

  // wind_direction string
  string wind_direction = 18;

  // cloud_cover string
  string cloud_cover = 19;

  // icon string
  string icon = 20;

  // sunrise_local string
  string sunrise_local = 21;

  // sunset_local string
  string sunset_local = 22;

  // weather_json string
  string weather_json = 23;

}